--- a/results/report.html
+++ b/results/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,39108],[[4,5,6,0,[],[1,92,39011],[[7,8,9,0,[],[1,106,38991],[],[[10,0,0,[],[1,16917,3445],[]],[11,0,0,[],[1,20365,5530],[]],[12,0,0,[],[1,25899,5560],[]],[13,0,0,[],[1,31461,7223],[]]],[],[4,4,0,0]]],[],[],[4,4,0,0]]],[],[],[4,4,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,21012],[[4,5,6,0,[],[1,37,20971],[[7,8,9,0,[],[1,44,20962],[],[[10,0,11,[12],[1,9324,3003],[]],[13,0,14,[15],[1,12329,7698],[]],[16,0,17,[18],[1,20030,771],[]]],[],[3,3,0,0]]],[],[],[3,3,0,0]]],[],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Android-Automation","*D:\\Projects\\QA\\android-automation","*..","*Steps","*D:\\Projects\\QA\\android-automation\\steps","*../steps","*appDemoSteps","*D:\\Projects\\QA\\android-automation\\steps\\appDemoSteps.robot","*../steps/appDemoSteps.robot","*As a user, I want to open Demo apps","*As a user, I want to open accessibility node provider","*As a user, I want to open accessibility service","*As a user, I want to open custom view"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Android-Automation","*D:\\Projects\\QA\\android-automation","*..","*Steps","*D:\\Projects\\QA\\android-automation\\steps","*../steps","*appDietSteps","*D:\\Projects\\QA\\android-automation\\steps\\appDietSteps.robot","*../steps/appDietSteps.robot","*TC01 - Open apps","*<p>Open apps\x3c/p>","*TC01","*TC02 - Verify that user can input data","*<p>Verify that user can input data\x3c/p>","*TC02","*TC03 - Verify that user can finish input data","*<p>Verify that user can finish input data\x3c/p>","*TC03"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:22","fail":0,"label":"All Tests","pass":4,"skip":0}],[],[{"elapsed":"00:00:39","fail":0,"id":"s1","label":"Android-Automation","name":"Android-Automation","pass":4,"skip":0},{"elapsed":"00:00:39","fail":0,"id":"s1-s1","label":"Android-Automation.Steps","name":"Steps","pass":4,"skip":0},{"elapsed":"00:00:39","fail":0,"id":"s1-s1-s1","label":"Android-Automation.Steps.appDemoSteps","name":"appDemoSteps","pass":4,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":3,"skip":0}],[{"elapsed":"00:00:03","fail":0,"label":"TC01","pass":1,"skip":0},{"elapsed":"00:00:08","fail":0,"label":"TC02","pass":1,"skip":0},{"elapsed":"00:00:01","fail":0,"label":"TC03","pass":1,"skip":0}],[{"elapsed":"00:00:21","fail":0,"id":"s1","label":"Android-Automation","name":"Android-Automation","pass":3,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1","label":"Android-Automation.Steps","name":"Steps","pass":3,"skip":0},{"elapsed":"00:00:21","fail":0,"id":"s1-s1-s1","label":"Android-Automation.Steps.appDietSteps","name":"appDietSteps","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1684146744531;
+window.output["baseMillis"] = 1684226228948;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 39148;
+window.output["generated"] = 21036;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
